fix(global-styles): overflow-x: hidden added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
   margin: 0;
   font-family: 'Inter', sans-serif;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 html,
 body,
